# canvs

./: .env.example  .gitignore  README.md  pyproject.toml
canvs-ui/: index.html  package-lock.json  package.json
canvs-ui/src/: App.tsx  api.ts  realtime.ts  store.ts  styles.css  types.ts
canvs-ui/src/components/: Canvas.tsx  CanvsNode.tsx  GraphIO.tsx  History.tsx  Inspector.tsx  MetricsChart.tsx  Palette.tsx  RunBar.tsx  Sidebar.tsx
examples/: toy_nodes.py
src/canvs/: __init__.py  graph.py  kaggle_push.py  registry.py  reporter.py  run_history.py  runner.py  server.py  supabase_schema.sql
src/canvs/compiler/: __init__.py  notebook.py  script.py  templates.py
tests/: conftest.py  test_compiler.py  test_graph.py  test_kaggle_push.py  test_registry.py  test_reporter.py  test_run_history.py  test_runner.py  test_server.py
